@@ -12,6 +12,7 @@ writer.index('index.html')
 writer.status('status/index.html')
 writer.status_alerts('status/alerts/index.html')
 writer.blacklist('status/blacklist/index.html')
+writer.platform_specific_issues('status/platform-specific-issues/index.html')
 
 repository = Debci::Repository.new
 
