@@ -8,6 +8,9 @@ debci (1.1.3) UNRELEASED; urgency=medium
     (>= 3.20).
   * bin/debci-collector, bin/debci-worker, lib/functions.sh#report_status:
     display suite and architecture together with package names
+  * HTML UI:
+    * add page listing Platform-specific issues, i.e. packages that passes on
+      one suite/arch but fails on another suite/arch.
 
   [ Jakub Wilk ]
   * public/style.css: Set correct font for alert, chart, rss, and tracker
